Fixed: Pull right/left issues with hero unit content alignment

--- a/framework/assets/css/themeblvd.css
+++ b/framework/assets/css/themeblvd.css
@@ -6660,11 +6660,28 @@ blockquote small {
 	.jumbotron-outer.has-bg-shade.height-100vh .jumbotron-wrap {
 		position: absolute;
 		top: 50%;
+		width: 100%;
+	}
+	/* @noflip */
+	.height-100vh .jumbotron-wrap.pull-none {
 		left: 50%;
 		-ms-transform: translate(-50%, -50%); /* IE9 */
 		-webkit-transform: translate(-50%, -50%);
 		transform: translate(-50%, -50%);
-		width: 100%;
+	}
+	/* @noflip */
+	.height-100vh .jumbotron-wrap.pull-left {
+		left: 10%;
+		-ms-transform: translate(0, -50%); /* IE9 */
+		-webkit-transform: translate(0, -50%);
+		transform: translate(0, -50%);
+	}
+	/* @noflip */
+	.height-100vh .jumbotron-wrap.pull-right {
+		right: 10%;
+		-ms-transform: translate(0, -50%); /* IE9 */
+		-webkit-transform: translate(0, -50%);
+		transform: translate(0, -50%);
 	}
 	.tb-suck-up .element-section:first-child > .element-jumbotron.popout.height-100vh:first-child {
 		margin-top: 0 !important;
